--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
   <body style="background-color:#000000; color:#ffffff;">
-    i dont save any data prolly idk
+    i will sell ur ip to 20 Israeli spies
   </body>
 </html>
